tests/adhoc/nullness/existing/negative.next.enabled.checknulls.bsl

tests\adhoc\nullness\existing\negative.fs(8,17): warning FS3261: Nullness warning: The type '(int * int)' is non-null, but a type supporting 'null' is expected.

tests\adhoc\nullness\existing\negative.fs(18,25): error FS0444: The type of a field using the 'DefaultValue' attribute must admit default initialization, i.e. have 'null' as a proper value or be a struct type whose fields all admit default initialization. You can use 'DefaultValue(false)' to disable this check

tests\adhoc\nullness\existing\negative.fs(23,25): error FS0444: The type of a field using the 'DefaultValue' attribute must admit default initialization, i.e. have 'null' as a proper value or be a struct type whose fields all admit default initialization. You can use 'DefaultValue(false)' to disable this check

tests\adhoc\nullness\existing\negative.fs(28,25): error FS0444: The type of a field using the 'DefaultValue' attribute must admit default initialization, i.e. have 'null' as a proper value or be a struct type whose fields all admit default initialization. You can use 'DefaultValue(false)' to disable this check

tests\adhoc\nullness\existing\negative.fs(34,25): error FS0444: The type of a field using the 'DefaultValue' attribute must admit default initialization, i.e. have 'null' as a proper value or be a struct type whose fields all admit default initialization. You can use 'DefaultValue(false)' to disable this check

tests\adhoc\nullness\existing\negative.fs(38,25): error FS0444: The type of a field using the 'DefaultValue' attribute must admit default initialization, i.e. have 'null' as a proper value or be a struct type whose fields all admit default initialization. You can use 'DefaultValue(false)' to disable this check

tests\adhoc\nullness\existing\negative.fs(42,25): error FS0444: The type of a field using the 'DefaultValue' attribute must admit default initialization, i.e. have 'null' as a proper value or be a struct type whose fields all admit default initialization. You can use 'DefaultValue(false)' to disable this check
